--- a/python-basics-notebook.ipynb
+++ b/python-basics-notebook.ipynb
@@ -359,12 +359,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.45811358336 <type 'float'>\n",
+      "0.45811358336 is the below median\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rnd\n",
+    "r = rnd.random()\n",
+    "print r, type(r)\n",
+    "if r < 0.25:\n",
+    "    print r, 'is the bottom quartile'\n",
+    "elif r < 0.5:\n",
+    "    print r, 'is the below median'\n",
+    "else:\n",
+    "    print r, 'is above median'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -375,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -388,11 +407,14 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "prices = {'AMAZ': 752.6, 'AAPL':104.34, 'FB':125}\n",
+    "print prices['AAPL'] # watch out the brackets"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -401,13 +423,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{' ': 0, '.': 0, 'T': 0, 'a': 0, 'c': 0, 'b': 0, 'e': 0, 'd': 0, 'g': 0, 'f': 0, 'i': 0, 'h': 0, 'k': 0, 'j': 0, 'm': 0, 'l': 0, 'o': 0, 'n': 0, 'q': 0, 'p': 0, 's': 0, 'r': 0, 'u': 0, 't': 0, 'w': 0, 'v': 0, 'y': 0, 'x': 0, 'z': 0}\n",
       "{' ': 8, '.': 1, 'T': 1, 'a': 1, 'c': 1, 'b': 1, 'e': 3, 'd': 1, 'g': 1, 'f': 1, 'i': 1, 'h': 2, 'k': 1, 'j': 1, 'm': 1, 'l': 1, 'o': 4, 'n': 1, 'q': 1, 'p': 1, 's': 1, 'r': 2, 'u': 2, 't': 1, 'w': 1, 'v': 1, 'y': 1, 'x': 1, 'z': 1}\n"
      ]
     }
    ],
    "source": [
     "#distribution of characters in a string\n",
-    "s = \"The quick brown fox jumps over the lazy dog.\"\n"
+    "s = \"The quick brown fox jumps over the lazy dog.\"\n",
+    "d = {c:0 for c in s}\n",
+    "print d\n",
+    "\n",
+    "for c in s:\n",
+    "    d[c] += 1\n",
+    "print d\n",
+    "\n",
+    "# C：0 means 所有letter在d中的初始计数为0\n",
+    "# for 函数： 计算每个letter的出现次数"
    ]
   },
   {
@@ -419,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -428,17 +460,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0!= 1\n",
-      "1!= 1\n",
-      "2!= 2\n",
-      "3!= 6\n",
-      "4!= 24\n"
+      "720\n"
      ]
     }
    ],
    "source": [
     "def factorial(n):\n",
-    "  \n"
+    "    if n<2:\n",
+    "        return 1\n",
+    "    return n*factorial(n-1)\n",
+    "\n",
+    "print factorial(6)\n",
+    "\n",
+    "#阶乘的函数  \n"
    ]
   },
   {
