--- a/python-basics-notebook.ipynb
+++ b/python-basics-notebook.ipynb
@@ -491,8 +491,16 @@
     }
    ],
    "source": [
+    "#最小公约数function\n",
     "def gcd(a, b):\n",
-    "# write this function...\n",
+    "    if a < b: # sawo a to be the larger number\n",
+    "        tmp = a;\n",
+    "        a = b;\n",
+    "        b = tmp;\n",
+    "    if a%b != 0: # go on looping\n",
+    "        return gcd(b, a%b)\n",
+    "    else:\n",
+    "        return b \n",
     "    \n",
     "    \n",
     "print gcd(144, 1024)"
